@@ -36,6 +36,7 @@
 #include "InternalEvents.h"				// Needed for CMuleInternalEvent
 #include "Preferences.h"
 #include "ScopedPtr.h"
+#include <wx/filename.h>				// Needed for wxFileName
 
 
 #ifndef AMULE_DAEMON
@@ -105,7 +106,7 @@ private:
 	}
 
 	void OnBtnCancel(wxCommandEvent& WXUNUSED(evt)) {
-		AddLogLineNS(_("HTTP download cancelled"));
+		AddLogLineN(_("HTTP download cancelled"));
 		Show(false);
 		StopThread();
 	}
@@ -139,7 +140,7 @@ DEFINE_LOCAL_EVENT_TYPE(wxEVT_HTTP_SHUTDOWN)
 #endif
 
 
-CHTTPDownloadThread::CHTTPDownloadThread(const wxChar* url, const wxChar* filename, HTTP_Download_File file_id, bool showDialog)
+CHTTPDownloadThread::CHTTPDownloadThread(const wxChar* url, const wxChar* filename, const wxChar* oldfilename, HTTP_Download_File file_id, bool showDialog)
 #ifdef AMULE_DAEMON
 	: CMuleThread(wxTHREAD_DETACHED),
 #else
@@ -158,6 +159,26 @@ CHTTPDownloadThread::CHTTPDownloadThread(const wxChar* url, const wxChar* filena
 		m_companion = dialog;
 #endif
 	}
+	// Get the date on which the original file was last modified
+	// But first: check if the file exists!
+	wxFileName origFile = wxFileName(oldfilename);
+	if (origFile.FileExists()) {
+		m_hasdate = true;
+		m_lastmodified = origFile.GetModificationTime();
+	} else {
+		m_hasdate = false;
+	}
+}
+
+
+// Format the given date to a RFC-2616 compliant HTTP date
+// Example: Thu, 14 Jan 2010 15:40:23 GMT
+wxString CHTTPDownloadThread::FormatDateHTTP(const wxDateTime& date)
+{
+	static wxChar* s_months[] = { wxT("Jan"), wxT("Feb"), wxT("Mar"), wxT("Apr"), wxT("May"), wxT("Jun"), wxT("Jul"), wxT("Aug"), wxT("Sep"), wxT("Oct"), wxT("Nov"), wxT("Dec") };
+	static wxChar* s_dow[] = { wxT("Sun"), wxT("Mon"), wxT("Tue"), wxT("Wed"), wxT("Thu"), wxT("Fri"), wxT("Sat") };
+
+	return CFormat(wxT("%s, %02d %s %d %02d:%02d:%02d GMT")) % s_dow[date.GetWeekDay(wxDateTime::UTC)] % date.GetDay(wxDateTime::UTC) % s_months[date.GetMonth(wxDateTime::UTC)] % date.GetYear(wxDateTime::UTC) % date.GetHour(wxDateTime::UTC) % date.GetMinute(wxDateTime::UTC) % date.GetSecond(wxDateTime::UTC);
 }
 
 
@@ -169,44 +190,58 @@ CMuleThread::ExitCode CHTTPDownloadThread::Entry()
 	
 	wxHTTP* url_handler = NULL;
 	
-	AddLogLineNS(_("HTTP download thread started"));
+	AddDebugLogLineN(logHTTP, wxT("HTTP download thread started"));
 	
 	const CProxyData* proxy_data = thePrefs::GetProxyData();
 	bool use_proxy = proxy_data != NULL && proxy_data->m_proxyEnable;
 	
 	try {	
 		wxFFileOutputStream outfile(m_tempfile);
-		
+
 		if (!outfile.Ok()) {
-			throw wxString(CFormat(wxT("Unable to create destination file %s for download!\n")) % m_tempfile);
+			throw wxString(CFormat(_("Unable to create destination file %s for download!")) % m_tempfile);
 		}
-			
-		if ( m_url.IsEmpty() ) {
+
+		if (m_url.IsEmpty()) {
 			// Nowhere to download from!
-			throw wxString(wxT("The URL to download can't be empty\n"));
+			throw wxString(_("The URL to download can't be empty"));
 		}
 
 		url_handler = new wxHTTP;
 		url_handler->SetProxyMode(use_proxy);
-	
-		CScopedPtr<wxInputStream> url_read_stream(GetInputStream(&url_handler, m_url, use_proxy));
-		
-		if (!url_read_stream.get()) {
-			throw wxString(CFormat(wxT("The URL %s returned: %i - Error (%i)!")) % m_url % url_handler->GetResponse() % url_handler->GetError());
+
+		// Build a conditional get request if the last modified date of the file being updated is known
+		if (m_hasdate) {
+			// Set a flag in the HTTP header that we only download if the file is newer.
+			// see: http://www.w3.org/Protocols/rfc2616/rfc2616-sec14.html#sec14.25
+			AddDebugLogLineN(logHTTP, wxT("If-Modified-Since: ") + FormatDateHTTP(m_lastmodified));
+			url_handler->SetHeader(wxT("If-Modified-Since"), FormatDateHTTP(m_lastmodified));
 		}
-		
+
+		CScopedPtr<wxInputStream> url_read_stream(GetInputStream(&url_handler, m_url, use_proxy));
+
+		if (!url_read_stream.get()) {
+			if (m_response == 304) {
+				m_result = HTTP_Skipped;
+				return 0;
+			} else {
+				m_result = HTTP_Error;
+				throw wxString(CFormat(_("The URL %s returned: %i - Error (%i)!")) % m_url % m_response % m_error);
+			}
+		}
+
 		int download_size = url_read_stream->GetSize();
 		if (download_size == -1) {
-			AddLogLineNS(_("Download size not received, downloading until connection is closed"));
+			AddDebugLogLineN(logHTTP, wxT("Download size not received, downloading until connection is closed"));
 		} else {
-			AddLogLineNS(CFormat(_("Download size: %i")) % download_size);
+			AddDebugLogLineN(logHTTP, CFormat(wxT("Download size: %i")) % download_size);
 		}
-		
+
 		// Here is our read buffer
 		// <ken> Still, I'm sure 4092 is probably a better size.
 		// MP: Most people can download at least at 32kb/s from http...
 		const unsigned MAX_HTTP_READ = 32768;
-		
+
 		char buffer[MAX_HTTP_READ];
 		int current_read = 0;
 		int total_read = 0;
@@ -218,7 +253,7 @@ CMuleThread::ExitCode CHTTPDownloadThread::Entry()
 				outfile.Write(buffer,current_read);
 				int current_write = outfile.LastWrite();
 				if (current_read != current_write) {
-					throw wxString(wxT("Critical error while writing downloaded file"));
+					throw wxString(_("Critical error while writing downloaded file"));
 				} else if (m_companion) {
 #ifndef AMULE_DAEMON
 					CMuleInternalEvent evt(wxEVT_HTTP_PROGRESS);
@@ -233,29 +268,29 @@ CMuleThread::ExitCode CHTTPDownloadThread::Entry()
 		if (current_read == 0) {
 			if (download_size == -1) {
 				// Download was probably succesful.
-				AddLogLineNS(CFormat(_("Downloaded %d bytes")) % total_read);
-				m_result = 1;
+				AddLogLineN(CFormat(_("Downloaded %d bytes")) % total_read);
+				m_result = HTTP_Success;
 			} else if (total_read != download_size) {
+				m_result = HTTP_Error;
 				throw wxString(CFormat(_("Expected %d bytes, but downloaded %d bytes")) % download_size % total_read);
 			} else {
 				// Download was succesful.
-				m_result = 1;
+				m_result = HTTP_Success;
 			}
 		}
 	} catch (const wxString& error) {
 		if (wxFileExists(m_tempfile)) {
 			wxRemoveFile(m_tempfile);
 		}
-
-		AddLogLineNS(error); // If there's console output anyway there should also be console output on error.
+		AddLogLineC(error);
 	}
 
 	if (url_handler) {
 		url_handler->Destroy();
 	}
-	
-	AddLogLineNS(_("HTTP download thread ended"));
-	
+
+	AddDebugLogLineN(logHTTP, wxT("HTTP download thread ended"));
+
 	return 0;
 }
 
@@ -286,14 +321,14 @@ wxInputStream* CHTTPDownloadThread::GetInputStream(wxHTTP** url_handler, const w
 	
 	if (!location.StartsWith(wxT("http://"))) {
 		// This is not a http url
-		throw wxString(wxT("Invalid URL for http download or http redirection (did you forget 'http://' ?)"));
+		throw wxString(_("Invalid URL for HTTP download or HTTP redirection (did you forget 'http://' ?)"));
 	}
-	
+
 	// Get the host
-	
+
 	// Remove the "http://"
 	wxString host = location.Right(location.Len() - 7); // strlen("http://") -> 7
-	
+
 	// I belive this is a bug...
 	// Sometimes "Location" header looks like this:
 	// "http://www.whatever.com:8080http://www.whatever.com/downloads/something.zip"
@@ -317,7 +352,7 @@ wxInputStream* CHTTPDownloadThread::GetInputStream(wxHTTP** url_handler, const w
 
 	// Build the cleaned url now
 	wxString url = wxT("http://") + host + wxT("/") + location_url;			
-	
+
 	int port = 80;
 	if (host.Find(wxT(':')) != -1) {
 		// This http url has a port
@@ -329,46 +364,62 @@ wxInputStream* CHTTPDownloadThread::GetInputStream(wxHTTP** url_handler, const w
 	addr.Hostname(host);
 	addr.Service(port);
 	if (!(*url_handler)->Connect(addr, true)) {
-		throw wxString(wxT("Unable to connect to http download server"));		
+		throw wxString(_("Unable to connect to HTTP download server"));		
 	}
 
 	wxInputStream* url_read_stream = (*url_handler)->GetInputStream(url);
 
-	AddLogLineNS(CFormat(_("Host: %s:%i\n")) % host % port);
-	AddLogLineNS(CFormat(wxT("URL: %s\n")) % url);
-	AddLogLineNS(CFormat(_("Response: %i (Error: %i)")) % (*url_handler)->GetResponse() % (*url_handler)->GetError());
+	/* store the HTTP response code */
+	m_response = (*url_handler)->GetResponse();
 
-	if (!(*url_handler)->GetResponse()) {
-		AddLogLineNS(_("WARNING: Void response on stream creation"));
+	/* store the HTTP error code */
+	m_error = (*url_handler)->GetError();
+
+	AddDebugLogLineN(logHTTP, CFormat(wxT("Host: %s:%i\n")) % host % port);
+	AddDebugLogLineN(logHTTP, CFormat(wxT("URL: %s\n")) % url);
+	AddDebugLogLineN(logHTTP, CFormat(wxT("Response: %i (Error: %i)")) % m_response % m_error);
+
+	if (!m_response) {
+		AddDebugLogLineC(logHTTP, wxT("WARNING: Void response on stream creation"));
 		// WTF? Why does this happen?
 		// This is probably produced by an already existing connection, because
 		// the input stream is created nevertheless. However, data is not the same.
 		delete url_read_stream;
-		throw wxString(wxT("Invalid response from http download server"));
+		throw wxString(_("Invalid response from HTTP download server"));
 	}
 
-	if ((*url_handler)->GetResponse() == 301  // Moved permanently
-		|| (*url_handler)->GetResponse() == 302 // Moved temporarily
+	if (m_response == 301  // Moved permanently
+		|| m_response == 302 // Moved temporarily
 		// What about 300 (multiple choices)? Do we have to handle it?
-		) { 
-		
+		) {
+
 		// We have to remove the current stream.
 		delete url_read_stream;
-			
+
 		wxString new_location = (*url_handler)->GetHeader(wxT("Location"));
-		
+
 		(*url_handler)->Destroy();
 		if (!new_location.IsEmpty()) {
 			(*url_handler) = new wxHTTP;
 			(*url_handler)->SetProxyMode(proxy);
+			if (m_hasdate) {
+				// Set a flag in the HTTP header that we only download if the file is newer.
+				// see: http://www.w3.org/Protocols/rfc2616/rfc2616-sec14.html#sec14.25
+				(*url_handler)->SetHeader(wxT("If-Modified-Since"), FormatDateHTTP(m_lastmodified));
+			}
 			url_read_stream = GetInputStream(url_handler, new_location, proxy);
 		} else {
-			AddLogLineCS(_("ERROR: Redirection code received with no URL"));
+			AddDebugLogLineC(logHTTP, wxT("ERROR: Redirection code received with no URL"));
 			url_handler = NULL;
 			url_read_stream = NULL;
 		}
+	} else if (m_response == 304) {		// "Not Modified"
+		delete url_read_stream;
+		(*url_handler)->Destroy();
+		url_read_stream = NULL;
+		url_handler = NULL;
 	}
-		
+
 	return url_read_stream;
 }
 
