@@ -58,6 +58,7 @@ Version 2.3.0 - The river knows.
 		* Check Kademlia search results against original criteria.
 		* Allow Kademlia searches with repetitive keywords.
 		* Allow adding current chat partner to friend list from tab's context menu.
+		* Allow not downloading files via HTTP if the requested file is not newer.
 
 	morph:
 		* Patch to uniform and fix minor errors on man pages
